:nail_care: Fix design alignment for bookmarks PR comments

--- a/src/components/bookmark/bookmark.css
+++ b/src/components/bookmark/bookmark.css
@@ -7,6 +7,19 @@
   padding: 0 20px;
 }
 
+.label {
+  margin-top: 25px;
+}
+
+.inputElement:focus:not([disabled]):not([readonly]) ~ .label:not(.fixed),
+.inputElement.filled ~ .label:not(.fixed) {
+  margin-top: 0px;
+}
+
+.inputElement:focus:not([disabled]):not([readonly]) ~ .label:not(.fixed) {
+  color: var(--color-primary-standard);
+}
+
 .resultList {
   list-style-type: none;
   display: flex;
@@ -65,6 +78,7 @@
   & input:not(:focus) {
     padding-left: 50px;
     padding-top: 30px !important;
+    font-family: var(--content-font);
   }
 }
 
@@ -163,6 +177,8 @@
   top: 25px;
   font-weight: 600;
   position: absolute;
+  color: var(--color-grayscale-dark);
+  font-family: var(--content-font);
 }
 
 .inputChildren {
@@ -173,6 +189,7 @@
     padding-top: 25px !important;
     position: absolute;
     font-size: 10px !important;
+    color: var(--color-grayscale-dark);
   }
 
   & label {
